[project]
name = "tensor-explain"
version = "0.1.0"
description = "Tensor-Explain is a Python library that simplifies the workflow between recurrent neural network models – such as LSTM and GRU – and Explainable Artificial Intelligence (XAI) techniques. By converting tensor-based input and output data into a pandas DataFrame format, the library eliminates the complexity associated with tensor manipulation, allowing developers and analysts to intuitively apply interpretation techniques."
authors = [
    {name = "BERTON, Lilian; ASSAOKA, João.",email = "joao.assaoka@unifesp.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "tensor_explain", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
blue = "^0.9.1"
isort = "^6.0.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.9"
mkdocstrings = "^0.29.0"
mkdocstrings-python = "^1.16.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
